CIRC-2018 add test